manifests/deployment/dd-core-development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-core-development-blue
  namespace: default
  labels:
    app: dd-core-development-blue
    deploy-id: dd-core-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd-core-development-blue
  template:
    metadata:
      labels:
        app: dd-core-development-blue
        deploy-id: dd-core-development
    spec:
      containers:
        - name: dd-core-development-blue
          image: underpost/underpost-engine:v3.3.77
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - >
              underpost start --build --run dd-core development
          readinessProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4016
              },
              "initialDelaySeconds": 5,
              "periodSeconds": 5,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          livenessProbe:
            {
              "httpGet": {
                "path": "/_internal/health",
                "port": 4016
              },
              "initialDelaySeconds": 30,
              "periodSeconds": 15,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          startupProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4016
              },
              "initialDelaySeconds": 10,
              "periodSeconds": 10,
              "timeoutSeconds": 3,
              "failureThreshold": 180
            }



---
apiVersion: v1
kind: Service
metadata:
  name: dd-core-development-blue-service
  namespace: default
spec:
  selector:
    app: dd-core-development-blue
  ports:
    - name: 'tcp-4017'
      protocol: TCP
      port: 4017
      targetPort: 4017
    - name: 'udp-4017'
      protocol: UDP
      port: 4017
      targetPort: 4017

    - name: 'tcp-4018'
      protocol: TCP
      port: 4018
      targetPort: 4018
    - name: 'udp-4018'
      protocol: UDP
      port: 4018
      targetPort: 4018

    - name: 'tcp-4019'
      protocol: TCP
      port: 4019
      targetPort: 4019
    - name: 'udp-4019'
      protocol: UDP
      port: 4019
      targetPort: 4019

    - name: 'tcp-4020'
      protocol: TCP
      port: 4020
      targetPort: 4020
    - name: 'udp-4020'
      protocol: UDP
      port: 4020
      targetPort: 4020

    - name: 'tcp-4021'
      protocol: TCP
      port: 4021
      targetPort: 4021
    - name: 'udp-4021'
      protocol: UDP
      port: 4021
      targetPort: 4021

    - name: 'tcp-4022'
      protocol: TCP
      port: 4022
      targetPort: 4022
    - name: 'udp-4022'
      protocol: UDP
      port: 4022
      targetPort: 4022
  type: LoadBalancer
