manifests/deployment/dd-core-development/traffic-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dd-core-development-traffic-service
  namespace: default
  labels:
    underpost.net/traffic-service: "true"
    underpost.net/deploy-id: dd-core-development
spec:
  type: ClusterIP
  selector:
    app: dd-core-development-blue
  ports:
    - name: 'tcp-4020'
      protocol: TCP
      port: 4020
      targetPort: 4020
    - name: 'udp-4020'
      protocol: UDP
      port: 4020
      targetPort: 4020

    - name: 'tcp-4021'
      protocol: TCP
      port: 4021
      targetPort: 4021
    - name: 'udp-4021'
      protocol: UDP
      port: 4021
      targetPort: 4021

    - name: 'tcp-4022'
      protocol: TCP
      port: 4022
      targetPort: 4022
    - name: 'udp-4022'
      protocol: UDP
      port: 4022
      targetPort: 4022

    - name: 'tcp-4023'
      protocol: TCP
      port: 4023
      targetPort: 4023
    - name: 'udp-4023'
      protocol: UDP
      port: 4023
      targetPort: 4023

    - name: 'tcp-4024'
      protocol: TCP
      port: 4024
      targetPort: 4024
    - name: 'udp-4024'
      protocol: UDP
      port: 4024
      targetPort: 4024

    - name: 'tcp-4025'
      protocol: TCP
      port: 4025
      targetPort: 4025
    - name: 'udp-4025'
      protocol: UDP
      port: 4025
      targetPort: 4025
