manifests/deployment/dd-core-development/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dogmadual.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-core-development
      namespace: default
  hostnames:
    - dogmadual.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4020
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.dogmadual.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-core-development
      namespace: default
  hostnames:
    - www.dogmadual.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.dogmadual.com/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.dogmadual.com/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4021
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4022
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexodev.org
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-core-development
      namespace: default
  hostnames:
    - nexodev.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4023
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.nexodev.org
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-core-development
      namespace: default
  hostnames:
    - www.nexodev.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.nexodev.org/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.nexodev.org/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4024
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-core-development-traffic-service
          port: 4025
          weight: 100
