manifests/deployment/dd-core-development/proxy.yaml

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dogmadual.com
  namespace: default
spec:
  virtualhost:
    fqdn: dogmadual.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4020
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.dogmadual.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.dogmadual.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4021
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4022
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: nexodev.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4023
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: www.nexodev.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4024
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-core-development-traffic-service
          port: 4025
          weight: 100
